proxy pattern main class and resources added